feat(docs): add comprehensive installation guide and remove outdated prompt documentation
- Introduced a new INSTALL.md file with detailed installation instructions for Windows, macOS, and Linux, including troubleshooting for common security issues.
- Removed the outdated prompt.md file to streamline documentation and avoid redundancy.
- Updated README.md to reflect the new installation process and enhance clarity.
- Adjusted author information in pyproject.toml and release workflow for consistency.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,7 +110,7 @@ jobs:
           Package: askit-cli
           Version: $DEBIAN_VERSION
           Architecture: amd64
-          Maintainer: Your Name <you@example.com>
+          Maintainer: git.lpl <git.lpl@protonmail.com>
           Description: A command-line assistant that uses AI to provide suggestions for shell commands.
           EOF
           # Create a wrapper script that calls the actual binary
